[project]
name = "nonebot-plugin-meme-stickers"
dynamic = ["version"]
description = "Make PJSK like meme stickers in one place"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.1",
    "nonebot-plugin-alconna>=0.54.2",
    "skia-python>=132.0b11",
    "cookit[pydantic]>=0.8.5",
    "yarl>=1.18.3",
    "httpx>=0.27.2",
    "rich>=13.9.4",
    "tenacity>=9.0.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-meme-stickers"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_meme_stickers/__init__.py"
