[project]
name = "nonebot-plugin-meme-stickers"
dynamic = ["version"]
description = "Make PJSK like meme stickers in one place"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-plugin-alconna>=0.59.4",
    "nonebot-plugin-waiter>=0.8.1",
    "nonebot-plugin-localstore>=0.7.4",
    "skia-python>=138.0",
    "cookit[loguru,pydantic,nonebot-alconna,nonebot-localstore]>=0.13.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.entry-points.nb_scripts]
stickers-gen-checksum = "nonebot_plugin_meme_stickers.scripts.gen_checksum:main"

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-meme-stickers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nonebot_plugin_meme_stickers/__init__.py"
